*1.99.1 (2.0 Preview 2)* May 10, 2007

* Fix some documentation typos [eventualbuddha]

* Don't retry failed connections if an explicit auth_methods list is given [Chris Farms]

* Added support for load and exit callbacks, which get invoked when all recipes have been loaded and when all requested tasks have been executed [Jamis Buck]

* Added support for start and finish callbacks, which get invoked when any task is called via the command-line [Jamis Buck]

* Make `capify' understand simple command-line switches [Jamis Buck]

* Make the server definition itself available to SSH channels, rather than just the host name [Jamis Buck]

* Identify servers by their complete credentials in logs, rather than simply by hostname [Jamis Buck]

* Uniquely identify servers based on hostname, port, and username, instead of merely on hostname [Jamis Buck]

* Allow (e.g.) scm_command and local_scm_command to be set in the event of different paths to the scm command on local vs. remote hosts. [Jamis Buck]

* Kill the "deploy:app" namespace and move those tasks into deploy, directly. [Jamis Buck]

* Make sure 'desc' applies to the next defined task, in any namespace. [Jamis Buck]

* Fix shell so that servers for a task are correctly discovered. [Jamis Buck]

* Added before(), after(), and on() callback creation methods. [Jamis Buck]

* Fix broken check! method for some deployment strategies. [Jamis Buck]

* deploy:cold should also run migrations before starting the app [Jamis Buck]

* Make the copy strategy check out to a temporary directory [Jamis Buck]


*1.99.0 (2.0 Preview 1)* April 24, 2007

* Add `capify' script to make it easier to prepare a project for deployment using cap [Jamis Buck]

* Make sure the sudo helper understands the SuSE dialect of the sudo password prompt [Steven Wisener]

* Fix synchronization issue with Gateway initialization [Doug Barth]

* Added opt-in "compat" and "upgrade" recipes for tasks to aid in the upgrade process to Capistrano 2 [Jamis Buck]
