@@ -1,3 +1,8 @@
+*SVN*
+
+* Add :default_environment variable, which is applied to every command
+
+
 *1.99.1 (2.0 Preview 2)* May 10, 2007
 
 * Fix some documentation typos [eventualbuddha]
